--- a/src/sass/3-layout/_header.scss
+++ b/src/sass/3-layout/_header.scss
@@ -3,6 +3,6 @@
 ==================================== */
 
 .header {
-    padding: 0.5rem 0 0;
     width: 100%;
+    border-bottom: #dedede solid 4px;
 }
