--- a/src/sass/2-base/_global.scss
+++ b/src/sass/2-base/_global.scss
@@ -6,11 +6,17 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+  width: 100%;  
+  overflow-x: hidden;
+}
+
 body {
     margin: 0;
     font-family: SoDoSans, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.8;
     font-size: 15px;
     -webkit-font-smoothing: antialiased;
 }
@@ -20,4 +26,13 @@ ul {
 }
 
 p {
+}
+
+.site-container {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.container {
+    padding: 0 1rem;
 }
