--- a/src/sass/3-layout/_hero.scss
+++ b/src/sass/3-layout/_hero.scss
@@ -3,10 +3,10 @@
 ==================================== */
 
 .site-title {
-    font-size: 30px;
+    font-size: 26px;
     text-align: center;
     line-height: 1.4;
-    margin: 0.5rem 0 1rem;
+    margin: 1rem 0;
 
     @media (min-width: $break-s) {
         margin: 1.5rem 0;
@@ -14,8 +14,10 @@
 }
 
 .hero {
+    margin-bottom: 3rem;
+    
     &__p {
-        margin: 0.75rem 0 1.75rem;
+        margin: 1.25rem 0;
 
         @media (min-width: $break-s) {
             margin: 1.5rem 0 2rem;
