--- a/src/sass/4-module/_4-module.scss
+++ b/src/sass/4-module/_4-module.scss
@@ -1,11 +1,11 @@
+@import "header-info";
 @import "header-icon";
 @import "nav";
 @import "nutri";
-@import "feat";
 @import "rewards";
 
 @import "ul";
 @import "btn";
 @import "img";
-@import "card";
+@import "sec-card";
 @import "form";
