--- a/src/sass/4-module/_header-icon.scss
+++ b/src/sass/4-module/_header-icon.scss
@@ -6,8 +6,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 0px;
-    padding: 0 0.5rem;
+    margin-top: -10px;
+    padding: 0 10px;
 
     @media (min-width: $break-s) {
         margin-top: 0.25rem;
@@ -17,21 +17,28 @@
         margin: -1rem 1rem 0;
     }
 
-    &__img {
-        width: 60px;
-        height: 60px;
-    }
+} 
 
-    &__btn {
-        margin-top: -4px;
-        margin-right: 0.75rem;
-    }
+.mob-menu-btn {
+  width: 40px;
+  height: 40px;
+  
+  &__bar {
+    display: block;
+    height: 3px;
+    width: 40px;
+    background-color: #006341;
+    margin: 8px 0;
+  }
+  
+}
 
-    &__menu-bar {
-        display: block;
-        height: 3px;
-        width: 40px;
-        background-color: #006341;
-        margin: 8px 0;
-    }
+.site-logo {
+  width: 50px;
+  height: 50px;
+  
+  &__img {
+    width: 50px;
+    height: 50px;
+  }
 }
