--- a/src/sass/4-module/_header-info.scss
+++ b/src/sass/4-module/_header-info.scss
@@ -1,5 +1,8 @@
 /* ================================= 
-  Card
+  Header Info
 ==================================== */
 
-
+.header-info {
+  margin-top: .5rem;
+  font-size: 12px;
+}
