--- a/src/sass/4-module/_img.scss
+++ b/src/sass/4-module/_img.scss
@@ -3,6 +3,8 @@
 ==================================== */
 
 .img {
+    line-height: 0;
+  
     &__media {
         height: 100%;
         width: 100%;
