--- a/src/sass/4-module/_nutri.scss
+++ b/src/sass/4-module/_nutri.scss
@@ -1,57 +1,58 @@
 /* ================================= 
   Nutri 
 ==================================== */
-.nutri {
-    &__label {
+.nutri-table {
+    &__header {
+        border-bottom: 5px solid #dedede;
+    }
+
+    &__row {
+        border-bottom: 1px solid #dedede;
+        padding: 0.5rem 0;
+        display: grid;
+        grid-template-columns: 50% 1fr;
+    }
+
+    &__span {
+        &-l {
+            text-align: left;
+        }
+
+        &-r {
+            text-align: right;
+        }
+
+        &-sub {
+            margin-left: 2rem;
+        }
+    }
+
+    &__footer {
+        margin-top: 1rem;
+  
+        &__p {
+          margin: 0.25rem 0;
+           font-size: 13px;
+        }
+    }
+
+}
+
+.select-list {
+  background: url("../img/icons/arrow.png") no-repeat 95% 95%;
+  background-size: 25px;
+  
+  &__label {
         display: block;
         color: #929292;
         font-size: 14px;
-    }
+  }
 
-    &__sel {
-        background: url("../img/icons/arrow.png") no-repeat 95% 95%;
-        background-size: 25px;
-    }
-
-    &__sel-input {
+  &__input {
         display: block;
         font-size: 18px;
         font-weight: 900;
         width: 100%;
-    }
-
-    &-table {
-        &__p {
-            border-bottom: 5px solid #dedede;
-        }
-
-        &__row {
-            border-bottom: 1px solid #dedede;
-            padding: 0.5rem 0;
-            display: grid;
-            grid-template-columns: 50% 1fr;
-        }
-
-        &__span {
-            &-l {
-                text-align: left;
-            }
-
-            &-r {
-                text-align: right;
-            }
-
-            &-sub {
-                margin-left: 2rem;
-            }
-        }
-
-        &__bottom {
-            margin-top: 1.5rem;
-        }
-
-        &__bottom p {
-            margin: 0.25rem 0;
-        }
-    }
+  }
+  
 }
