--- a/src/sass/4-module/_sec-card.scss
+++ b/src/sass/4-module/_sec-card.scss
@@ -1,16 +1,15 @@
 /* ================================= 
-  Feat
+  Card
 ==================================== */
 
-.feat {
-    margin: 3rem 0;
+.sec-card {
 
-    &__h2 {
+    &__title {
         margin: 1.5rem 0 0.5rem;
     }
 
-    &__sub-header {
-        margin: 0;
+    &__sub-title {
+        margin: 0 0 1rem;
         font-style: italic;
     }
 }
