--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,7 +24,8 @@ html {
   line-height: 1.15;
   /* 1 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Sections
    ========================================================================== */
@@ -32,13 +33,15 @@ html {
  * Remove the margin in all browsers.
  */
 body {
-  margin: 0; }
+  margin: 0;
+}
 
 /**
  * Render the `main` element consistently in IE.
  */
 main {
-  display: block; }
+  display: block;
+}
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -46,7 +49,8 @@ main {
  */
 h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
+  margin: 0.67em 0;
+}
 
 /* Grouping content
    ========================================================================== */
@@ -60,7 +64,8 @@ hr {
   height: 0;
   /* 1 */
   overflow: visible;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -70,7 +75,8 @@ pre {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Text-level semantics
    ========================================================================== */
@@ -78,7 +84,8 @@ pre {
  * Remove the gray background on active links in IE 10.
  */
 a {
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 /**
  * 1. Remove the bottom border in Chrome 57-
@@ -90,14 +97,16 @@ abbr[title] {
   text-decoration: underline;
   /* 2 */
   text-decoration: underline dotted;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 b,
 strong {
-  font-weight: bolder; }
+  font-weight: bolder;
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -109,13 +118,15 @@ samp {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Add the correct font size in all browsers.
  */
 small {
-  font-size: 80%; }
+  font-size: 80%;
+}
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -126,13 +137,16 @@ sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 sub {
-  bottom: -0.25em; }
+  bottom: -0.25em;
+}
 
 sup {
-  top: -0.5em; }
+  top: -0.5em;
+}
 
 /* Embedded content
    ========================================================================== */
@@ -140,7 +154,8 @@ sup {
  * Remove the border on images inside links in IE 10.
  */
 img {
-  border-style: none; }
+  border-style: none;
+}
 
 /* Forms
    ========================================================================== */
@@ -160,7 +175,8 @@ textarea {
   line-height: 1.15;
   /* 1 */
   margin: 0;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Show the overflow in IE.
@@ -169,7 +185,8 @@ textarea {
 button,
 input {
   /* 1 */
-  overflow: visible; }
+  overflow: visible;
+}
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
@@ -178,41 +195,46 @@ input {
 button,
 select {
   /* 1 */
-  text-transform: none; }
+  text-transform: none;
+}
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button; }
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
 
 /**
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
   border-style: none;
-  padding: 0; }
+  padding: 0;
+}
 
 /**
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText; }
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
 
 /**
  * Correct the padding in Firefox.
  */
 fieldset {
-  padding: 0.35em 0.75em 0.625em; }
+  padding: 0.35em 0.75em 0.625em;
+}
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -232,53 +254,60 @@ legend {
   padding: 0;
   /* 3 */
   white-space: normal;
-  /* 1 */ }
+  /* 1 */
+}
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 progress {
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
 textarea {
-  overflow: auto; }
+  overflow: auto;
+}
 
 /**
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type="checkbox"],
-[type="radio"] {
+[type=checkbox],
+[type=radio] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto; }
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type="search"] {
+[type=search] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -288,7 +317,8 @@ textarea {
   -webkit-appearance: button;
   /* 1 */
   font: inherit;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Interactive
    ========================================================================== */
@@ -296,13 +326,15 @@ textarea {
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
 details {
-  display: block; }
+  display: block;
+}
 
 /*
  * Add the correct display in all browsers.
  */
 summary {
-  display: list-item; }
+  display: list-item;
+}
 
 /* Misc
    ========================================================================== */
@@ -310,24 +342,28 @@ summary {
  * Add the correct display in IE 10+.
  */
 template {
-  display: none; }
+  display: none;
+}
 
 /**
  * Add the correct display in IE 10.
  */
 [hidden] {
-  display: none; }
+  display: none;
+}
 
 /* ================================= 
   Global
 ==================================== */
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 html,
 body {
   width: 100%;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
 body {
   margin: 0;
@@ -335,17 +371,21 @@ body {
   font-weight: 400;
   line-height: 1.8;
   font-size: 15px;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+}
 
 ul {
-  list-style: none; }
+  list-style: none;
+}
 
 .site-container {
   width: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .container {
-  padding: 0 1rem; }
+  padding: 0 1rem;
+}
 
 /* ================================= 
   My Lib
@@ -353,17 +393,20 @@ ul {
 .ml--flex {
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+}
 .ml--center {
   margin: 0 auto;
-  width: 60%; }
+  width: 60%;
+}
 
 /* ================================= 
   Header
 ==================================== */
 .header {
   width: 100%;
-  border-bottom: #dedede solid 4px; }
+  border-bottom: #dedede solid 4px;
+}
 
 /* ================================= 
   Hero
@@ -372,18 +415,25 @@ ul {
   font-size: 26px;
   text-align: center;
   line-height: 1.4;
-  margin: 1rem 0; }
-  @media (min-width: 414px) {
-    .site-title {
-      margin: 1.5rem 0; } }
+  margin: 1rem 0;
+}
+@media (min-width: 414px) {
+  .site-title {
+    margin: 1.5rem 0;
+  }
+}
 
 .hero {
-  margin-bottom: 3rem; }
+  margin-bottom: 3rem;
+}
+.hero__p {
+  margin: 1.25rem 0;
+}
+@media (min-width: 414px) {
   .hero__p {
-    margin: 1.25rem 0; }
-    @media (min-width: 414px) {
-      .hero__p {
-        margin: 1.5rem 0 2rem; } }
+    margin: 1.5rem 0 2rem;
+  }
+}
 
 /* ================================= 
   Main
@@ -393,19 +443,23 @@ ul {
 ==================================== */
 .footer {
   background-color: #f9f8f6;
-  margin-top: 1rem; }
-  .footer__line {
-    border-bottom: #000 solid 1px;
-    margin: 1rem 0; }
-  .footer__email, .footer__social {
-    margin: 3rem 0; }
+  margin-top: 1rem;
+}
+.footer__line {
+  border-bottom: #000 solid 1px;
+  margin: 1rem 0;
+}
+.footer__email, .footer__social {
+  margin: 3rem 0;
+}
 
 /* ================================= 
   Header Info
 ==================================== */
 .header-info {
-  margin-top: .5rem;
-  font-size: 12px; }
+  margin-top: 0.5rem;
+  font-size: 12px;
+}
 
 /* ================================= 
   Header icon
@@ -416,170 +470,220 @@ ul {
   justify-content: space-between;
   align-items: center;
   margin-top: -10px;
-  padding: 0 10px; }
-  @media (min-width: 414px) {
-    .header-icon {
-      margin-top: 0.25rem; } }
-  @media (min-width: 768px) {
-    .header-icon {
-      margin: -1rem 1rem 0; } }
+  padding: 0 10px;
+}
+@media (min-width: 414px) {
+  .header-icon {
+    margin-top: 0.25rem;
+  }
+}
+@media (min-width: 768px) {
+  .header-icon {
+    margin: -1rem 1rem 0;
+  }
+}
 
 .mob-menu-btn {
   width: 40px;
-  height: 40px; }
-  .mob-menu-btn__bar {
-    display: block;
-    height: 3px;
-    width: 40px;
-    background-color: #006341;
-    margin: 8px 0; }
+  height: 40px;
+}
+.mob-menu-btn__bar {
+  display: block;
+  height: 3px;
+  width: 40px;
+  background-color: #006341;
+  margin: 8px 0;
+}
 
 .site-logo {
   width: 50px;
-  height: 50px; }
-  .site-logo__img {
-    width: 50px;
-    height: 50px; }
+  height: 50px;
+}
+.site-logo__img {
+  width: 50px;
+  height: 50px;
+}
 
 /* ================================= 
   Nav
 ==================================== */
 .nav {
-  margin-top: 0.5rem; }
-  .nav-desk, .nav-mobile {
-    display: none; }
-  .nav-mobile__ul, .nav-mobile__link, .nav-mobile__link:active {
-    color: #fff; }
-  .nav-mobile__ul {
-    max-width: 480px;
-    margin: auto;
-    background-color: #1e1e1e;
-    height: auto;
-    padding: 1rem 0; }
-  .nav-mobile__link {
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    display: block;
-    text-align: center;
-    text-transform: uppercase; }
-    .nav-mobile__link:hover, .nav-mobile__link:active {
-      background-color: #ddd;
-      color: #000; }
+  margin-top: 0.5rem;
+}
+.nav-desk, .nav-mobile {
+  display: none;
+}
+.nav-mobile__ul, .nav-mobile__link, .nav-mobile__link:active {
+  color: #fff;
+}
+.nav-mobile__ul {
+  max-width: 480px;
+  margin: auto;
+  background-color: #1e1e1e;
+  height: auto;
+  padding: 1rem 0;
+}
+.nav-mobile__link {
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+  text-align: center;
+  text-transform: uppercase;
+}
+.nav-mobile__link:hover, .nav-mobile__link:active {
+  background-color: #ddd;
+  color: #000;
+}
 
 /* ================================= 
   Nutri 
 ==================================== */
 .nutri-table__header {
-  border-bottom: 5px solid #dedede; }
+  border-bottom: 5px solid #dedede;
+}
 .nutri-table__row {
   border-bottom: 1px solid #dedede;
   padding: 0.5rem 0;
   display: grid;
-  grid-template-columns: 50% 1fr; }
+  grid-template-columns: 50% 1fr;
+}
 .nutri-table__span-l {
-  text-align: left; }
+  text-align: left;
+}
 .nutri-table__span-r {
-  text-align: right; }
+  text-align: right;
+}
 .nutri-table__span-sub {
-  margin-left: 2rem; }
+  margin-left: 2rem;
+}
 .nutri-table__footer {
-  margin-top: 1rem; }
-  .nutri-table__footer__p {
-    margin: 0.25rem 0;
-    font-size: 13px; }
+  margin-top: 1rem;
+}
+.nutri-table__footer__p {
+  margin: 0.25rem 0;
+  font-size: 13px;
+}
 
 .select-list {
   background: url("../img/icons/arrow.png") no-repeat 95% 95%;
-  background-size: 25px; }
-  .select-list__label {
-    display: block;
-    color: #929292;
-    font-size: 14px; }
-  .select-list__input {
-    display: block;
-    font-size: 18px;
-    font-weight: 900;
-    width: 100%; }
+  background-size: 25px;
+}
+.select-list__label {
+  display: block;
+  color: #929292;
+  font-size: 14px;
+}
+.select-list__input {
+  display: block;
+  font-size: 18px;
+  font-weight: 900;
+  width: 100%;
+}
 
 /* ================================= 
   Rewards
 ==================================== */
 .rewards {
   color: #fff;
-  background-color: #1f3933; }
-  .rewards__img {
-    background: #1f3933 url("../img/rewards-bg.jpg") no-repeat;
-    background-size: 900px;
-    background-position: 25% 5%;
-    height: 525px;
-    width: 100%; }
-  .rewards__link {
-    height: 225px; }
-  .rewards__overlay {
-    text-align: center;
-    padding-top: 200px; }
-  .rewards__title {
-    font-size: 28px; }
-  .rewards__p {
-    margin-bottom: 3rem; }
+  background-color: #1f3933;
+}
+.rewards__img {
+  background: #1f3933 url("../img/rewards-bg.jpg") no-repeat;
+  background-size: 900px;
+  background-position: 25% 5%;
+  height: 525px;
+  width: 100%;
+}
+.rewards__link {
+  height: 225px;
+}
+.rewards__overlay {
+  text-align: center;
+  padding-top: 200px;
+}
+.rewards__title {
+  font-size: 28px;
+}
+.rewards__p {
+  margin-bottom: 3rem;
+}
 
 /* ================================= 
   Ul Module
 ==================================== */
 .ul {
-  padding: 0; }
-  .ul__li {
-    display: inline-block; }
-  .ul__link {
-    color: #000;
-    text-decoration: none; }
+  padding: 0;
+}
+.ul__li {
+  display: inline-block;
+}
+.ul__link {
+  color: #000;
+  text-decoration: none;
+}
 
 .social-list {
-  width: 50%; }
-  .social-list__li {
-    height: 30px;
-    width: 30px; }
+  width: 50%;
+}
+.social-list__li {
+  height: 30px;
+  width: 30px;
+}
 
 .footer-list__li {
-  padding: 0.5rem 0; }
+  padding: 0.5rem 0;
+}
 .footer-list__span {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 /* ================================= 
   BTN
 ==================================== */
 .btn {
-  text-align: center; }
-  .btn__link {
-    text-decoration: none; }
-  .btn__label {
-    border: #006341 solid 2px;
-    border-radius: 5px;
-    padding: 0.75rem;
-    color: #000; }
+  text-align: center;
+}
+.btn__link {
+  text-decoration: none;
+}
+.btn__label {
+  border: #006341 solid 2px;
+  border-radius: 5px;
+  padding: 0.75rem;
+  color: #000;
+}
 
 .btn__label--wh {
   color: #fff;
-  border: #fff solid 2px; }
+  border: #fff solid 2px;
+}
 
 /* ================================= 
   Img
 ==================================== */
 .img {
-  line-height: 0; }
-  .img__media {
-    height: 100%;
-    width: 100%; }
+  line-height: 0;
+}
+.img__media {
+  height: 100%;
+  width: 100%;
+}
 
 /* ================================= 
   Card
 ==================================== */
 .sec-card__title {
-  margin: 1.5rem 0 0.5rem; }
+  margin: 1.5rem 0 0.5rem;
+}
 .sec-card__sub-title {
   margin: 0 0 1rem;
-  font-style: italic; }
+  font-style: italic;
+}
+
+.inner-card__p {
+  font-size: 13px;
+}
 
 /* ================================= 
   Form
@@ -591,13 +695,17 @@ ul {
   padding: 0.25rem;
   width: 100%;
   margin: 0 0.75rem 0.5rem 0;
-  line-height: 1.8; }
-  .form__input[value] {
-    color: #b3b3b3; }
+  line-height: 1.8;
+}
+.form__input[value] {
+  color: #b3b3b3;
+}
 .form__email {
-  max-width: 290px; }
+  max-width: 290px;
+}
 .form__zip {
-  max-width: 100px; }
+  max-width: 100px;
+}
 .form__submit {
   background-color: #3d3935;
   color: #fff;
@@ -607,14 +715,17 @@ ul {
   width: 150px;
   font-size: 16px;
   margin-top: 0.5rem;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 /* ================================= 
   Btn Styles
 ==================================== */
 .btn__feat {
-  margin-top: 3rem; }
-  .btn__feat-a {
-    color: #fff; }
+  margin-top: 3rem;
+}
+.btn__feat-a {
+  color: #fff;
+}
 
 /*# sourceMappingURL=style.css.map */
