--- a/src/sass/4-module/_4-module.scss
+++ b/src/sass/4-module/_4-module.scss
@@ -1,11 +1,10 @@
-@import "header-info";
-@import "header-icon";
+@import "header-card";
 @import "nav";
 @import "nutri";
 @import "rewards";
 
 @import "ul";
 @import "btn";
-@import "img";
-@import "sec-card";
+@import "media";
+@import "card";
 @import "form";
