--- a/src/sass/4-module/_media.scss
+++ b/src/sass/4-module/_media.scss
@@ -1,11 +1,11 @@
 /* ================================= 
-  Img
+  Media
 ==================================== */
 
-.img {
+.media {
     line-height: 0;
   
-    &__media {
+    &__img {
         height: 100%;
         width: 100%;
     }
