--- a/src/sass/5-state/_ul-state.scss
+++ b/src/sass/5-state/_ul-state.scss
@@ -1,8 +1,3 @@
 /* ================================= 
-  Header Info
+  ul State
 ==================================== */
-
-.header-info {
-  margin-top: .5rem;
-  font-size: 12px;
-}
