--- a/src/sass/1-helpers/_variables.scss
+++ b/src/sass/1-helpers/_variables.scss
@@ -2,15 +2,35 @@
   Variables
 ==================================== */
 
-// Breakpoints
+
+/* ========================= 
+  Breakpoints
+============================ */ 
 
 // Small devices
 $break-s: 414px;
+
 // Medium devices
 $break-m: 768px;
+
 // Large devices
 $break-l: 992px;
+
 // Extra large devices
 $break-xl: 1200px;
+
 // Retna large devices
 $break-ret: 1400px;
+
+
+/* ========================= 
+  Colors
+============================ */ 
+
+$primary-color: #006f44;
+  
+$secondary-color: #3d3935;
+    
+$tertiary-color: #f9f8f6;
+  
+$alt-color: #1e3932;  
