--- a/src/sass/2-base/_global.scss
+++ b/src/sass/2-base/_global.scss
@@ -1,6 +1,4 @@
-/* ================================= 
-  Global
-==================================== */
+
 
 * {
     box-sizing: border-box;
@@ -23,16 +21,10 @@ body {
 
 ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 p {
 }
 
-.site-container {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.container {
-    padding: 0 1rem;
-}
