--- a/src/sass/3-layout/_footer.scss
+++ b/src/sass/3-layout/_footer.scss
@@ -2,11 +2,15 @@
   footer
 ==================================== */
 
+.l-footer {
+    background-color: #f9f8f6;
+    margin-top: 1rem;  
+}
+
 .footer {
     background-color: #f9f8f6;
-    margin-top: 1rem;
+    margin-top: 1rem;  
    
-
     &__line {
         border-bottom: #000 solid 1px;
         margin: 1rem 0;
