--- a/src/sass/3-layout/_header.scss
+++ b/src/sass/3-layout/_header.scss
@@ -2,7 +2,15 @@
   Header
 ==================================== */
 
-.header {
+.l-header {
     width: 100%;
     border-bottom: #dedede solid 4px;
+}
+
+/* ================================= 
+  Site Logo
+==================================== */
+.site-logo {
+  width: 50px;
+  height: 50px;
 }
