--- a/src/sass/4-module/_btn.scss
+++ b/src/sass/4-module/_btn.scss
@@ -15,10 +15,30 @@
         border-radius: 5px;
         padding: 0.75rem;
         color: #000;
+    
+        &--white {
+          color: #fff;
+          border: #fff solid 2px;
+        }
     }
 }
 
-.btn__label--wh {
-  color: #fff;
-   border: #fff solid 2px;
+
+
+/* ================================= 
+  Mobile Menu BTN
+==================================== */
+
+.mob-menu-btn {
+  width: 40px;
+  height: 40px;
+  
+  &__bar {
+    display: block;
+    height: 3px;
+    width: 40px;
+    background-color: #006341;
+    margin: 8px 0;
+  }
+  
 }
