--- a/src/sass/4-module/_card.scss
+++ b/src/sass/4-module/_card.scss
@@ -2,7 +2,7 @@
   Card
 ==================================== */
 
-.sec-card {
+.card {
     &__title {
         margin: 1.5rem 0 0.5rem;
     }
@@ -14,7 +14,7 @@
 }
 
 .inner-card {
-    &__p {
+    &__copy {
         font-size: 13px;
     }
 }
