--- a/src/sass/4-module/_header-card.scss
+++ b/src/sass/4-module/_header-card.scss
@@ -1,7 +1,14 @@
 /* ================================= 
-  Header icon
+  Header Card
 ==================================== */
-.header-icon {
+.header-card {
+  
+  &--info {
+    margin-top: .5rem;
+    font-size: 12px;
+  }
+
+  &--icon {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -17,28 +24,10 @@
         margin: -1rem 1rem 0;
     }
 
-} 
-
-.mob-menu-btn {
-  width: 40px;
-  height: 40px;
-  
-  &__bar {
-    display: block;
-    height: 3px;
-    width: 40px;
-    background-color: #006341;
-    margin: 8px 0;
-  }
-  
-}
-
-.site-logo {
-  width: 50px;
-  height: 50px;
-  
-  &__img {
-    width: 50px;
-    height: 50px;
   }
 }
+
+
+
+
+
