--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,4 +3,4 @@
 @import '2-base/2-base';
 @import '3-layout/3-layout';
 @import '4-module/4-module';
-@import '5-styles/5-styles';
+@import '5-state/5-state';
